--- a/templates/market.html
+++ b/templates/market.html
@@ -3,5 +3,34 @@
 {% block body%}
 <h1> Market page</h1>
 
-<p>{{item_name}}</p>
+<table class="table table-hover table-dark">
+    <thead>
+        <tr>
+            <!-- Your Columns HERE -->
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Barcode</th>
+            <th scope="col">Price</th>
+            <th scope='col'>Options</th>
+
+        </tr>
+    </thead>
+
+    <tbody>
+        <!-- Your rows inside the table HERE: -->
+            {% for row in items %}
+            <tr>
+                <td>{{row.id}}</td>
+                <td>{{row.name}}</td>
+                <td>{{row.barcode}}</td>
+                <td>${{row.price}}</td>
+                <td>
+                    <button class="btn btn-outline btn-info">More info</button>
+                    <button class="btn btn-outline btn-success">Purchase this item</button>
+                </td>
+            </tr>
+            {% endfor %}
+    </tbody>
+</table>
+
 {% endblock %}
