--- a/market/templates/index.html
+++ b/market/templates/index.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
+{% block title %} Homepage {% endblock %}
 
 {% block body%}
     
-    <h1>Home page</h1>
+    <p> content <p>
 
 
 {% endblock %}
