--- a/market/templates/market.html
+++ b/market/templates/market.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-
+{% block title %} Market {% endblock %}
 {% block body%}
-<h1> Market page</h1>
 
 <table class="table table-hover table-dark">
     <thead>
@@ -20,7 +19,7 @@
         <!-- Your rows inside the table HERE: -->
             {% for row in items %}
             <tr>
-                <td>{{row.id}}</td>
+                <td>{{ row.id }}</td>
                 <td>{{row.name}}</td>
                 <td>{{row.barcode}}</td>
                 <td>${{row.price}}</td>
