--- a/market/templates/login.html
+++ b/market/templates/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -7,9 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    {% block head %}{% endblock %}
+    
+    <link rel="stylesheet" href="{{url_for('static', filename='style.css') }}">
 
-    <title>{% block title %}{% endblock %}</title>
+
+    <title>Login Page</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -41,7 +43,7 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('logout_page')}}">Logout</a>
+                    <a class="nav-link" href="#">Logout</a>
                 </li>
             </ul>
 
@@ -75,21 +77,33 @@
     {% endif %}
 
     {% endwith %}
+            
+        <div class="reset-this">
 
+            <form method="POST" class="box">
+                {{ form.hidden_tag() }}
+                
+                <h1>
+                    Login
+                </h1>
+                
+                
+                {{ form.username( placeholder="Username", autocomplete="off")}}
 
+                
+                {{ form.password( placeholder="Password") }}
 
-    {% block body %} {% endblock %}
+                
 
+                {{ form.submit(class="") }}
+                
+                
+            </form>
+        </div>
+    </body>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-  <style>
-      body {
-        background-color: #212121;
-        color: white
-      }
-  </style>
-</html>
+  
